# OS_Lab2

./: README.md
OS_Lab2_17/OS_Lab2_17/: CMakelists.txt  functions.cpp  functions.h  main.cpp  main_test.cpp
OS_Lab2_98/OS_Lab2_98/: CMakelists.txt  functions.cpp  functions.h  main.cpp  main_test.cpp
OS_Lab2_WinAPI/: OS_Lab2_WinAPI.sln
OS_Lab2_WinAPI/OS_Lab2_WinAPI/: CMakeLists.txt  OS_Lab2_WinAPI.vcxproj  main.cpp  minmaxav.h  tests.cpp
OS_Lab2_thread/: OS_Lab2_thread.sln
OS_Lab2_thread/OS_Lab2_thread/: OS_Lab2_thread.vcxproj  OS_Lab2_thread.vcxproj.filters  main.cpp  minmaxav.h
